--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <body>
 
-    <h1 href="encurtador.com.br/juC47">89@)$!ksla</h1>
+    <a href="encurtador.com.br/juC47">89@)$!ksla</a>
 
   </body>
 
